add missing dependencies

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "UPFROnt": "git+https://github.com/SEDARI/UPFROnt#1189c3dab38e8bdff6829ea58e44b9f66216a792",
     "agile-upfront-leveldb": "git+https://github.com/Agile-IoT/agile-upfront-leveldb.git",
-    "clone": "^2.1.1"
+    "clone": "^2.1.1",
+    "winston": "^2.3.1"
   },
   "repository": {
     "type": "git",
