--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "agile-audit": "git+https://github.com/Agile-IoT/agile-audit.git#v0.1.0",
     "agile-upfront-leveldb": "git+https://github.com/Agile-IoT/agile-upfront-leveldb.git",
-    "agile-upfront-locks": "git+https://github.com/Agile-IoT/agile-upfront-locks",
+    "agile-upfront-locks": "git+https://github.com/Agile-IoT/agile-upfront-locks#v0.0.1",
     "clone": "^2.1.1",
     "UPFROnt": "git+https://github.com/nopbyte/UPFROnt",
     "winston": "2.3.1"
